# picocoin

./: configure.ac
src/: Makefile.am  wallet.c  wallet.h
